Solved background not covering whole page in mobile

--- a/webapp/src/main/resources/static/css/main.css
+++ b/webapp/src/main/resources/static/css/main.css
@@ -45,6 +45,7 @@ body.login-bg, .login-bg .form-container, .login-bg .form {
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
+    background-attachment: fixed;
 }
 
 main {
